<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HistoricoFragment">

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginTop="313dp"
        android:layout_marginLeft="29dp"
        android:src="@drawable/ic_map" />
    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginTop="337dp"
        android:layout_marginLeft="29dp"
        android:src="@drawable/ic_clock" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="285dp"
                android:layout_marginTop="-4dp"
                android:src="@drawable/historico_foto" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="29dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/historico_pizzeria"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:fontFamily="@font/poppins_light"
                android:text="@string/historico_direccion"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:fontFamily="@font/poppins_light"
                android:text="@string/historico_espera"
                android:textColor="@color/black" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="27dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="29dp"
                android:fontFamily="@font/poppins_bold"
                android:text="Menús"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/card_04" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/card_05" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>